# AP-Task4

./: AlgorithSettings.cpp  AlgorithSettings.h  AlgorithmSettings.cpp  AlgorithmSettings.h  CLI.cpp  CLI.h  CMakeLists.txt  CalcDist.cpp  CalcDist.h  ClassifyData.cpp  ClassifyData.h  Client.cpp  Client.h  ClientInputCheck.cpp  ClientMain.cpp  Command.cpp  Command.h  DefaultIO.h  DisplayResult.cpp  DisplayResult.h  DownloadResult.cpp  DownloadResult.h  Info.cpp  Info.h  KNN.cpp  KNN.h  Makefile  PointReader.h  README.md  SafetyChecks.cpp  SafetyChecks.h  Server.cpp  Server.h  ServerMain.cpp  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h  UploadFile.cpp  UploadFile.h  (+1 more)
ClientFiles/: Client.cpp  Client.h  ClientInputCheck.h  ClientMain.cpp
ServerFiles/: CLI.cpp  CLI.h  SafetyChecks.cpp  SafetyChecks.h  Server.cpp  Server.h  ServerMain.cpp  ServerTimer.cpp  ServerTimer.h
ServerFiles/CLIFiles/: CLI.cpp  CLI.h  ThreadCLI.cpp  ThreadCLI.h
ServerFiles/CommandFiles/: AlgorithmSettings.cpp  AlgorithmSettings.h  ClassifyData.h  Command.cpp  Command.h  DisplayResult.cpp  DisplayResult.h  DownloadResult.cpp  DownloadResult.h  UploadFile.cpp  UploadFile.h
ServerFiles/KNNFIles/: CalcDist.h
ServerFiles/KNNFiles/: KNN.cpp  KNN.h
ServerFiles/PointFiles/: Point.cpp  Point.h  PointReader.h
SocketFiles/: DefaultIO.h  SocketFile.cpp  SocketFile.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
